syntax = "proto3";

package LaunchPB;

enum ProtoCode
{
    // 账号注册
    E_Register = 0;

    // 账号注册回复
    E_RegisterResp = 1;

    // 账号登录
    E_Login = 2;

    // 账号登陆回复
    E_LoginResp = 3;

    // 测试协议
    E_Hero = 4;
}

// 请求注册
message Register
{
    // 账号名称
    string account = 1;

    // 账号密码
    string password = 2;
}

// 注册结果的枚举值
enum RegisterResult
{
    // 注册成功
    E_RegisterSuccess = 0;

    // 注册失败 原因：账号长度不合法(必须不为空，且小于等于32个字符)
    E_AccountWrong = 1;

    // 注册失败 原因：密码长度不合法(必须不为空，且小于等于32个字符)
    E_PasswordWrong = 2;

    // 注册失败 原因：请求注册的账号名已经被其他人占用
    E_AccountExist = 3;

    // 注册失败 原因：未知错误
    E_UnknownError = 4;
}

// 请求注册回复
message RegisterResp 
{
    // 注册结果 
    RegisterResult result = 1;

    // 注册成功时 账号名称 
    string account = 2;

    // 注册成功时 账号密码 
    string password = 3;
}

// 请求登录
message Login 
{
    // 账号名称
    string account = 1;

    // 账号密码
    string password = 2;
}

enum LoginResult
{
    // 登录成功
    E_LoginSuccess = 0;

    // 登录失败 原因：账号或者密码为空
    E_InputNull = 1;

    // 登录失败 原因：账号不存在或者密码错误
    E_InputWrong = 2;
}

// 请求登录回复
message LoginResp 
{
    // 登录结果
    LoginResult result = 1;

    // 账号名称
    string account = 2;

    // 账号密码
    string password = 3;
}

message Hero
{
    string name = 1;

    int32 age = 2;
}